# kdeconnect-kde

app/qml/: presentationRemote.qml
data/: org.kde.kdeconnect.metainfo.xml
kio/: CMakeLists.txt  kdeconnect-network.desktop
plugins/notifications/: notification.cpp  notification.h  notificationsplugin.cpp
plugins/presenter/: CMakeLists.txt  assets.qrc  kdeconnect_presenter_config.qml  presenterplugin.cpp
po/ar/: kdeconnect-app.po  kdeconnect-plugins.po  kdeconnect-urlhandler.po
po/ast/: kdeconnect-app.po  kdeconnect-plugins.po
po/az/: kdeconnect-app.po  kdeconnect-plugins.po
po/bg/: kdeconnect-app.po  kdeconnect-plugins.po
po/bs/: kdeconnect-plugins.po
po/ca/: kdeconnect-app.po  kdeconnect-plugins.po  kdeconnect-urlhandler.po
po/ca@valencia/: kdeconnect-app.po  kdeconnect-plugins.po  kdeconnect-urlhandler.po
po/cs/: kdeconnect-app.po  kdeconnect-plugins.po  kdeconnect-urlhandler.po
po/da/: kdeconnect-app.po  kdeconnect-plugins.po
po/de/: kdeconnect-app.po  kdeconnect-core.po  kdeconnect-plugins.po  kdeconnect-urlhandler.po
po/el/: kdeconnect-app.po  kdeconnect-plugins.po
po/en_GB/: kdeconnect-app.po  kdeconnect-plugins.po
po/eo/: kdeconnect-app.po  kdeconnect-plugins.po
po/es/: kdeconnect-app.po  kdeconnect-plugins.po  kdeconnect-urlhandler.po  plasma_applet_org.kde.kdeconnect.po
po/et/: kdeconnect-app.po  kdeconnect-plugins.po
po/eu/: kdeconnect-app.po  kdeconnect-plugins.po  kdeconnect-urlhandler.po
po/fi/: kdeconnect-app.po  (+1 more)
smsapp/: conversationmodel.cpp  conversationmodel.h
urlhandler/: kdeconnect-handler.cpp
(+105 files in other folders)
